Fixed a few more transaprency contrast warnings.

--- a/src/app/modules/media/components/mt-media-actions/mt-media-actions.component.scss
+++ b/src/app/modules/media/components/mt-media-actions/mt-media-actions.component.scss
@@ -27,6 +27,7 @@
   &:not(:hover) {
     .list-only {
       opacity: 0;
+      visibility: hidden;
     }
   }
 }
