--- a/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
+++ b/src/app/modules/media/components/mt-media-cover/mt-media-cover.component.scss
@@ -13,14 +13,10 @@
   overflow: hidden;
   position: relative;
 
-  &:hover {
-    .backdrop {
-      opacity: 1;
-    }
-  }
   &:not(:hover) {
     .backdrop {
       opacity: 0;
+      visibility: hidden;
     }
   }
 
